--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <script>
     const socket = new WebSocket('ws://localhost:8080');
 
-    console.log('Attempting...');
+    console.log('Attempting Connection...');
 
     socket.onopen = () => {
-        console.log('Opening...');
+        console.log('Connection Opened...');
         socket.send('Hi...');
     };
 
     socket.onclose = (event) => {
-        console.log('Closing...', event);
+        console.log('Connection Closed...', event);
     };
 
     socket.onmessage = (message) => {
@@ -26,7 +26,7 @@
     };
 
     socket.onerror = (error) => {
-        console.log('Error: ', error);
+        console.log('Connection Error: ', error);
     };
     </script>
 </body>
